# manikeys

./: .gitignore  AGENTS.md  ARCHITECTURE.md  GEMINI.md  Makefile  README.md  cap.py  context.py  keyboard.py  main.py  make.bat  parameter.py  pyproject.toml  reproduce_error.py  simplify.py  sphere_projection.py
.ctags.d/: config.ctags
.github/workflows/: test.yml
cad/: body_bottom.stl  body_screw_hole.stl  body_screw_mask.stl  body_screw_placement.stl  cable_path.stl  cap.py  cap_grid.stl  cap_hole.stl  cap_hole_grid.stl  cap_thumb.stl  cap_thumb_hole.stl  cap_top_grid.stl  keyboard.py  logo.stl  magnet_snap.stl  socket_adapter.stl  socket_adapter_grid.stl
cad/connectors/: placement_mask.stl  pogo_pin_adapter.stl  rj11.stl  rj11_adapter.stl  rj11_adapter_trimmed.stl  rj11_mask.stl  usbc_adapter.stl  usbc_adapter_trimmed.stl  usbc_connector_mask.stl  usbc_mask.stl  usbc_placement_mask.stl
data/: cad.py  layout.py  parameters.py
firmware/: Makefile
firmware/connected_sound/: FQBN  connected_sound.ino
firmware/hub/: FQBN  hub.ino
firmware/matrix_scaner/: FQBN  matrix_scaner.ino
firmware/shared/: library.properties
firmware/tests/: Makefile  comm_mock.cpp  comm_mock.h  run_tests  test_key_matrix.cpp  test_msgs.cpp  test_msgs_master.cpp  test_msgs_slave.cpp  tests.h
models/: layout.py  parameters.py  projection.py
simplifiers/: meshlib.py  meshoptimizer.py  pyfqmr.py
src/: body.py  context.py  full_keyboard.py  loader.py  main.py  numpy_ext.py  openscad.py  openscad.pyi  pyvista_ext.py  render.py
tests/: test_body.py  test_layout.py  test_oled_096.py  test_sphere_projection.py
viewer/: index.html  server.py
(+307 files in other folders)
