[project]
name = "manikeys"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "injector>=0.24.0",
    "numpy>=2.4.3",
    "pyvista>=0.47.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.2",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = {find = {where = ["src"]}}

[tool.uv]
package = true

[tool.ruff]
line-length = 80

[tool.pytest.ini_options]
pythonpath = ["src"]
