[project]
name = "manikeys"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "injector>=0.24.0",
    "numpy>=2.4.3",
    "pyvista>=0.47.1",
    "meshlib>=3.1.1.92",
    "pyfqmr>=0.5.0",
    "fast-simplification>=0.1.13",
    "meshoptimizer>=0.2.30a0",
    "manifold3d>=3.4.1",
]

[dependency-groups]
dev = [
    "fastapi>=0.135.3",
    "ipdb>=0.13.13",
    "pytest>=9.0.2",
    "ruff>=0.15.2",
    "uvicorn>=0.43.0",
    "watchdog>=6.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = {find = {where = ["src"]}}

[tool.uv]
package = true

[tool.ruff]
line-length = 80

[tool.pytest.ini_options]
pythonpath = ["src"]
